// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs require-types-exports.mdx code examples ESLint output 1`] = `
"Incorrect

type Arg = string;
type Result = number;

export function strLength(arg: Arg): Result {
                               ~~~ "Arg" is used in other exports from this file, so it should also be exported.
                                     ~~~~~~ "Result" is used in other exports from this file, so it should also be exported.
  return arg.length;
}
"
`;

exports[`Validating rule docs require-types-exports.mdx code examples ESLint output 2`] = `
"Incorrect

interface Fruit {
  name: string;
  color: string;
}

export const getFruitName = (fruit: Fruit) => fruit.name;
                                    ~~~~~ "Fruit" is used in other exports from this file, so it should also be exported.
"
`;

exports[`Validating rule docs require-types-exports.mdx code examples ESLint output 3`] = `
"Incorrect

enum Color {
  Red = 'red',
  Green = 'green',
  Blue = 'blue',
}

export declare function getRandomColor(): Color;
                                          ~~~~~ "Color" is used in other exports from this file, so it should also be exported.
"
`;

exports[`Validating rule docs require-types-exports.mdx code examples ESLint output 4`] = `
"Correct

export type Arg = string;
export type Result = number;

export function strLength(arg: Arg): Result {
  return arg.length;
}
"
`;

exports[`Validating rule docs require-types-exports.mdx code examples ESLint output 5`] = `
"Correct

export interface Fruit {
  name: string;
  color: string;
}

export const getFruitName = (fruit: Fruit) => fruit.name;
"
`;

exports[`Validating rule docs require-types-exports.mdx code examples ESLint output 6`] = `
"Correct

export enum Color {
  Red = 'red',
  Green = 'green',
  Blue = 'blue',
}

export declare function getRandomColor(): Color;
"
`;
